# config_management

./: .bazelrc  BUILD  MODULE.bazel  pyproject.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: bzlmod-lock-check.yml  coverage_report.yml  deps-acceptlist-check.yml  deps-whitelist-check.yml  docs.yml  gitlint.yml  score-pr-checks.yml  static-analysis.yml  test.yml  tests.yml
bazel/patches/: score_communication_add_proxy_data.patch  score_tooling_remove_svglib.patch
bazel/toolchains/: BUILD
build_docs/: BUILD  docs_runner.sh
docs/sphinx/: BUILD
main/: genindex.html  index.html  requirement-requirement.html  schema_violations.json  search.html  searchindex.js
main/_sources/config_management_index/dependability_analysis/: fmea.rst.txt
main/_sources/config_management_index/traceability_report/: index.rst.txt
main/config_management_index/: assumed_system.html  components.html
main/config_management_index/assumed_system_requirements/: assumed_system_requirements.html
main/config_management_index/components/config_daemon_component_requirements/: component_requirements.html
main/config_management_index/components/config_provider_component_requirements/: component_requirements.html
main/config_management_index/dependability_analysis/: fmea.html
main/config_management_index/feature_requirements/feature_requirements/: feature_requirements.html
main/config_management_index/traceability_report/: forwarded_aous.html  index.html  unit_test.html
pr-1/: index.html
pr-10/: genindex.html  index.html  schema_violations.json  search.html
pr-11/: index.html  schema_violations.json
pr-12/: index.html  schema_violations.json
pr-13/: index.html  schema_violations.json
pr-17/: index.html  schema_violations.json
pr-19/: index.html  schema_violations.json
pr-21/: index.html
pr-22/: index.html  schema_violations.json
pr-23/: index.html
pr-24/: genindex.html  index.html  objects.inv  requirement-requirement.html  searchindex.js
pr-24/_sources/config_management_index/: software_arch.rst.txt  traceability.rst.txt
pr-24/_sources/config_management_index/assumptions_of_use/: assumptions_of_use.rst.txt
pr-24/_sources/config_management_index/components/: config_daemon_component.rst.txt
pr-24/_sources/config_management_index/traceability_report/: feature_requirements.rst.txt  index.rst.txt  public_api.rst.txt  root_causes.rst.txt
pr-24/config_management_index/: assumed_system.html  index.html  software_arch.html
pr-24/config_management_index/assumed_system_requirements/: assumed_system_requirements.html
pr-24/config_management_index/assumptions_of_use/: assumptions_of_use.html  assumptions_of_use_aou_trlc.html
pr-24/config_management_index/components/: config_daemon_component.html  config_provider_component.html
pr-24/config_management_index/components/config_daemon_component_requirements/: component_requirements.html
pr-24/config_management_index/traceability_report/: architecture.html  failure_modes.html  index.html  root_causes.html
pr-24/html/: .buildinfo  genindex.html  index.html  requirement-requirement.html  search.html  searchindex.js
pr-24/html/.doctrees/: environment.pickle  index.doctree
pr-24/html/.doctrees/config_management_index/: assumed_system.doctree  components.doctree  index.doctree  software_arch.doctree  traceability.doctree
pr-24/html/_sources/: index.rst.txt
pr-24/html/_sources/config_management_index/: assumed_system.rst.txt
pr-24/html/config_management_index/: assumed_system.html  components.html  index.html  software_arch.html  traceability.html
pr-24/html/config_management_index/assumed_system_requirements/: assumed_system_requirements.html
pr-24/html/config_management_index/assumptions_of_use/: assumptions_of_use_aou_trlc.html
pr-24/html/config_management_index/components/: config_daemon_component.html  config_provider_component.html
pr-25/: index.html  schema_violations.json
pr-26/: genindex.html  index.html
pr-27/: genindex.html  index.html  schema_violations.json  search.html
pr-28/: index.html  objects.inv  schema_violations.json
pr-28/_sources/config_management_index/: components.rst.txt  index.rst.txt
pr-28/config_management_index/: index.html  software_arch.html  traceability.html
pr-28/config_management_index/components/: config_daemon_component.html  config_provider_component.html
pr-28/config_management_index/traceability_report/: component_requirements.html  index.html  public_api.html  root_causes.html
pr-3/: index.html
pr-30/: index.html  objects.inv  search.html  searchindex.js
pr-30/_sources/config_management_index/: assumed_system.rst.txt
pr-30/config_management_index/: index.html  traceability.html
pr-30/config_management_index/assumptions_of_use/: assumptions_of_use.html
pr-30/config_management_index/components/: config_daemon_component.html  config_provider_component.html
pr-30/config_management_index/traceability_report/: architecture.html  component_requirements.html  control_measures.html  failure_modes.html  feature_requirements.html  index.html  unit_test.html
pr-30/config_management_index/units/: config_daemon_app_unit.html  config_provider_details_unit.html
pr-4/: index.html
pr-5/: genindex.html  index.html  schema_violations.json
pr-6/: genindex.html  index.html  needs.json  search.html
requirements/: BUILD
requirements/assumed_system_requirements/: BUILD  assumed_system_requirements.trlc
requirements/component_requirements/config_daemon/: BUILD  component_requirements.trlc
requirements/component_requirements/config_provider/: BUILD  component_requirements.trlc
requirements/feature_requirements/: BUILD  feature_requirements.trlc
requirements/safety_analysis/: BUILD  failure_modes.trlc
score/config_management/: deps_acceptlist.json  deps_whitelist.json
score/config_management/config_daemon/: BUILD
score/config_management/config_daemon/code/: BUILD  main.cpp  (+1 more)
score/config_management/config_provider/: BUILD  README.md  README_score.md
score/config_management/dependability/: BUILD
tests/rust/: test_main.rs
(+285 files in other folders)
