# *******************************************************************************
# Copyright (c) 2025, 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_config_management",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_python", version = "1.5.1")
bazel_dep(name = "platforms", version = "0.0.10")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.67.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.14")

# LLVM Toolchains Rules - host configuration
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++17"},
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

# tooling
bazel_dep(name = "score_tooling", version = "1.1.2")
bazel_dep(name = "aspect_rules_lint", version = "1.13.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

#docs-as-code
bazel_dep(name = "score_docs_as_code", version = "4.0.3")

# s-core base libs
bazel_dep(name = "score_baselibs", version = "0.2.7")

# s-core communication
bazel_dep(name = "score_communication", version = "0.2.1")

bazel_dep(name = "score_logging", version = "0.2.1")

bazel_dep(name = "score_lifecycle_health", version = "0.2.0")

# s-core persistency
bazel_dep(name = "score_persistency", version = "0.3.2")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "a4f7e95210d8093ba208b91cbc5b681eae8d502b",  # trlc-2.0.3 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)
